unpackaged/main/default/objects/Contact/fields/Add_to_f9list_id__c.field-meta.xml
<CustomField>
    <fullName>Add_to_f9list_id__c</fullName>
    <description>Entering a Five9 List id into this field triggers the creation of a Five9 List Item for the contact record, allowing the record to sync to Five9</description>
    <label>Add to Five9 List</label>
    <length>50</length>
    <type>Text</type>
</CustomField>