unpackaged/main/default/objects/Contact/fields/Box_View_Access__c.field-meta.xml
<CustomField>
    <fullName>Box_View_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Box View Access</label>
    <type>Checkbox</type>
</CustomField>