unpackaged/main/default/objects/Contact/fields/Contact_ID_Unique__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_Unique__c</fullName>
    <label>Hubspot ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>