unpackaged/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>The Student Contact option indicates a partner that Verto can refer our students to if the student is interested in contacting someone at the college directly.</description>
    <label>Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admissions Decisions</fullName>
            </value>
            <value>
                <fullName>Channel Enrollment Contact</fullName>
            </value>
            <value>
                <fullName>Partnership Decisions</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations/Processing</fullName>
            </value>
            <value>
                <fullName>Contact for Students</fullName>
            </value>
            <value>
                <fullName>Billing/Contract Contacts</fullName>
                <isActive>false</isActive>
                <label>Billing/Contract Contacts</label>
            </value>
            <value>
                <fullName>Course Mapping</fullName>
                <isActive>false</isActive>
                <label>Course Mapping</label>
            </value>
            <value>
                <fullName>Financial Aid Contact</fullName>
                <isActive>false</isActive>
                <label>Financial Aid Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>