unpackaged/main/default/objects/Contact/fields/Deal_ID_Unique__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID_Unique__c</fullName>
    <label>Deal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>