unpackaged/main/default/objects/Contact/fields/Delete_from_f9list_id__c.field-meta.xml
<CustomField>
    <fullName>Delete_from_f9list_id__c</fullName>
    <description>Entering a Five9 List id into this field triggers the deletion of the Five9 List Item related to the contact record, removing the record&#39;s sync from Five9</description>
    <label>Delete from Five9 List</label>
    <length>50</length>
    <type>Text</type>
</CustomField>