unpackaged/main/default/objects/Contact/fields/Enrolled_in_Partner_School__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_Partner_School__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the student enroll with one of our partners?</inlineHelpText>
    <label>Enrolled in Partner School?</label>
    <type>Checkbox</type>
</CustomField>