unpackaged/main/default/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>