unpackaged/main/default/objects/Contact/fields/High_School_Counselor__c.field-meta.xml
<CustomField>
    <fullName>High_School_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High School Counselor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>High School Counselor</relationshipLabel>
    <relationshipName>High_School_Counselor</relationshipName>
    <type>Lookup</type>
</CustomField>