unpackaged/main/default/objects/Contact/fields/Imported_From_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>Imported_From_HubSpot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imported From HubSpot</label>
    <type>Checkbox</type>
</CustomField>