unpackaged/main/default/objects/Contact/fields/No_Longer_Works_Here__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_Works_Here__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the contact no longer works at the Account it is associated with.</inlineHelpText>
    <label>No Longer Works Here</label>
    <type>Checkbox</type>
</CustomField>