unpackaged/main/default/objects/Contact/fields/Open_to_Verto_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Verto_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open to Verto Marketing</label>
    <type>Checkbox</type>
</CustomField>