unpackaged/main/default/objects/Contact/fields/Parent_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Parent_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>