unpackaged/main/default/objects/Contact/fields/Parent_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Parent Contact 2)</relationshipLabel>
    <relationshipName>Parent_Contact_2</relationshipName>
    <type>Lookup</type>
</CustomField>