unpackaged/main/default/objects/Contact/fields/Partner_Schools__c.field-meta.xml
<CustomField>
    <fullName>Partner_Schools__c</fullName>
    <label>Partner Schools</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adelphi University</fullName>
            </value>
            <value>
                <fullName>Belhaven U</fullName>
            </value>
            <value>
                <fullName>Berry College</fullName>
            </value>
            <value>
                <fullName>Bucknell University</fullName>
            </value>
            <value>
                <fullName>Butler University</fullName>
            </value>
            <value>
                <fullName>Case Western Reserve</fullName>
            </value>
            <value>
                <fullName>Catholic University</fullName>
            </value>
            <value>
                <fullName>Chatham University</fullName>
            </value>
            <value>
                <fullName>Clark University</fullName>
            </value>
            <value>
                <fullName>College of Wooster</fullName>
            </value>
            <value>
                <fullName>Cornell College</fullName>
            </value>
            <value>
                <fullName>DePauw University</fullName>
            </value>
            <value>
                <fullName>Goucher College</fullName>
            </value>
            <value>
                <fullName>Grinnell College</fullName>
            </value>
            <value>
                <fullName>Hanover College</fullName>
            </value>
            <value>
                <fullName>High Point University</fullName>
            </value>
            <value>
                <fullName>Illinois Institute of Technology</fullName>
            </value>
            <value>
                <fullName>James Madison University</fullName>
            </value>
            <value>
                <fullName>Lewis &amp; Clark College</fullName>
            </value>
            <value>
                <fullName>Lynn University</fullName>
            </value>
            <value>
                <fullName>Macquarie University</fullName>
            </value>
            <value>
                <fullName>Merrimack College</fullName>
            </value>
            <value>
                <fullName>Mills College</fullName>
            </value>
            <value>
                <fullName>Muhlenberg College</fullName>
            </value>
            <value>
                <fullName>Naropa University</fullName>
            </value>
            <value>
                <fullName>Ohio Wesleyan U</fullName>
            </value>
            <value>
                <fullName>Pace University</fullName>
            </value>
            <value>
                <fullName>Portland State University</fullName>
            </value>
            <value>
                <fullName>Prescott College</fullName>
            </value>
            <value>
                <fullName>Regis University</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>