unpackaged/main/default/objects/Contact/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>US High School Student</fullName>
            </value>
            <value>
                <fullName>International High School Student</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>High School Guidance Counselor</fullName>
            </value>
            <value>
                <fullName>Independent Educational Consultant</fullName>
            </value>
            <value>
                <fullName>Verto University Partner</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Program Director</fullName>
            </value>
            <value>
                <fullName>SLC</fullName>
            </value>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>