unpackaged/main/default/objects/Contact/fields/SF_ID18_Contact__c.field-meta.xml
<CustomField>
    <fullName>SF_ID18_Contact__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF_ID18_Contact</label>
    <type>Text</type>
</CustomField>