unpackaged/main/default/objects/Contact/fields/SF_ID18_User__c.field-meta.xml
<CustomField>
    <fullName>SF_ID18_User__c</fullName>
    <label>SF_ID18_User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>