unpackaged/main/default/objects/Contact/fields/University_Name__c.field-meta.xml
<CustomField>
    <fullName>University_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>University Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>