unpackaged/main/default/objects/Contact/fields/z_Class_Program__c.field-meta.xml
<CustomField>
    <fullName>z_Class_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_Class Program</label>
    <referenceTo>Semester__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>