unpackaged/main/default/objects/Contact/recordTypes/Counselor.recordType-meta.xml
<RecordType>
    <fullName>Counselor</fullName>
    <active>true</active>
    <description>This Contact record type should be used when creating a contact for a high school counselor or other school/educational officials.</description>
    <label>Counselor</label>
</RecordType>