unpackaged/main/default/objects/Contact/recordTypes/Program_Staff.recordType-meta.xml
<RecordType>
    <fullName>Program_Staff</fullName>
    <active>true</active>
    <label>Program Staff</label>
</RecordType>