unpackaged/main/default/objects/Contact/recordTypes/University.recordType-meta.xml
<RecordType>
    <fullName>University</fullName>
    <active>true</active>
    <description>Default Record Type for University Contacts</description>
    <label>University</label>
</RecordType>