unpackaged/main/default/objects/Contact/validationRules/cant_save_view_access_without_details.validationRule-meta.xml
<ValidationRule>
    <fullName>cant_save_view_access_without_details</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $User.Bypass_Validation__c = False, 
 Box_View_Access__c = TRUE, 
OR( 
ISBLANK(AccountId), 
ISBLANK( Email )))</errorConditionFormula>
    <errorMessage>You must enter an Account and an email in order to give this user box access.</errorMessage>
</ValidationRule>