unpackaged/main/default/objects/Contact/validationRules/University_Partner_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>University_Partner_must_be_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Enrolled_in_Partner_School__c  = TRUE,
   ISPICKVAL(Partner_Schools__c , &quot;None&quot;)
 )</errorConditionFormula>
    <errorDisplayField>Partner_Schools__c</errorDisplayField>
    <errorMessage>University Partner must be selected</errorMessage>
</ValidationRule>