unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>NY</value>
    </filters>
    <filters>
        <field>Persona__c</field>
        <operation>equals</operation>
        <value>High School Guidance Counselor</value>
    </filters>
    <filters>
        <field>Persona__c</field>
        <operation>equals</operation>
        <value>Independent Educational Consultant</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Contacts</label>
</ListView>