unpackaged/main/default/objects/Contact/listViews/Program_Staff.listView-meta.xml
<ListView>
    <fullName>Program_Staff</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Persona__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Program_Staff</value>
    </filters>
    <label>Program Staff</label>
</ListView>